--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -31,6 +31,19 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v2
       
+    - name: Setup Node.js
+      uses: actions/setup-node@v2
+      with:
+        node-version: '18'
+        
+    - name: Install VTS remote dependencies
+      run: npm install
+      working-directory: vts-remote
+      
+    - name: Build VTS remote
+      run: npm run build
+      working-directory: vts-remote
+      
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
 
